fixed text overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,7 @@
 body{
     font-family: "Roboto Mono", monospace;
     font-size: 150%;
+    white-space: initial;
 }
 
 table {
